--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,6 +13,7 @@
 
 <body>
  <div class="container my-2">
+ <a th:href="@{/showNewEmployeeForm}" class="btn btn-primary btn-sm mb-3"> Add Employee </a>
  <h1>Employees List</h1> 
   <table border="1" class = "table table-striped table-responsive-md">
    <thead>
